Criei um site das facas Dopplers
Site das facas dopplers do CS2

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Facas Doppler</title>
     <meta name="keywords" content="CS2, Facas, Doppler, HTML, CSS">
     <meta name="description" content="Um site sobre as facas doppler do CS2.">
+
+    <link rel="icon" type="image/x-icon" href="img/icon_butterfly.svg">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/responsivo.css">
 
@@ -48,7 +50,7 @@
         </div>
 
         <p>No CS2, atualmente, existem 7 fases distintas de facas Doppler. Para muitos jogadores de Counter-Strike 2 (CS2), possuir pelo menos uma dessas facas é um sonho e uma grande conquista. A seguir, exploraremos todas essas incríveis e deslumbrantes fases.</p>
-        
+
     </header>
 
     <section class="section">
@@ -139,11 +141,18 @@
     </section>
 
     <footer>
+
         <div class="logo-rodape">
-        <h1 class="doppler">Facas Doppler</h1>
-        <p style="color:#FF2978;">Um site informativo sobre as fases dopplers de facas do CS2. Ele foi feito com HTML e CSS puro.</p>
+
+            <h1 class="doppler">Facas Doppler</h1>
+            <p style="color:#FF2978;">Um site informativo sobre as fases dopplers de facas do CS2. Ele foi feito com HTML e CSS puro.</p>
+
         </div>
-        <b style="color:#FF2978;">© Eric Hideki Miyahara</b>
+        
+        <b>Copyright © Eric Hideki Miyahara 2024</b>
+
+        <b>Todos os direitos reservados</b>
+
     </footer>
 </body>
 </html>
