--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
             <h2 style="text-transform: uppercase;">Doppler Safira</h2>
 
-            <img style="max-width:60%;" src="img/fase4.png" alt="Faca com fase safira">
+            <img style="max-width:60%;" src="img/safira.png" alt="Faca com fase safira">
 
             <a target="_blank" href="https://skinport.com/blog/cs2-doppler-phases-guide">Fonte: SkinPort</a>
 
@@ -119,7 +119,7 @@
 
             <h2 style="text-transform: uppercase;">Doppler Rubi</h2>
 
-            <img style="max-width:60%;" src="img/ruby.png" alt="Faca com fase rubi">
+            <img style="max-width:60%;" src="img/rubi.png" alt="Faca com fase rubi">
 
             <a target="_blank" href="https://skinport.com/blog/cs2-doppler-phases-guide">Fonte: SkinPort</a>
 
@@ -131,7 +131,7 @@
 
             <h2 style="text-transform: uppercase;">Doppler Pérola Negra</h2>
 
-            <img style="max-width:60%;" src="img/black-pearl.png" alt="Faca com fase pérola negra">
+            <img style="max-width:60%;" src="img/perola-negra.png" alt="Faca com fase pérola negra">
 
             <a target="_blank" href="https://skinport.com/blog/cs2-doppler-phases-guide">Fonte: SkinPort</a>
 
