--- a/index.html
+++ b/index.html
@@ -1,19 +1,15 @@
 <!DOCTYPE html>
-
 <html lang="pt-br">
-
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Facas Doppler</title>
     <meta name="keywords" content="CS2, Facas, Doppler, HTML, CSS">
     <meta name="description" content="Um site sobre as facas doppler do CS2.">
 
-    <link rel="icon" type="image/x-icon" href="img/icon_butterfly.svg">
+    <link rel="icon" type="image/x-icon" href="img/icone_butterfly.svg">
     <link rel="stylesheet" href="css/estilo.css">
     <link rel="stylesheet" href="css/responsivo.css">
-
 </head>
 
 <body>
@@ -149,7 +145,7 @@
 
         </div>
         
-        <b>Copyright © Eric Hideki Miyahara 2024</b>
+        <b>Copyright © <a style="text-decoration: none; color: #FF2978;" target="_blank" href="https://github.com/EricHidekiMiyahara">Eric Hideki Miyahara</a> 2024</b>
 
         <b>Todos os direitos reservados</b>
 
